2009/09/14 (TS):
 - udpComm.h, padProto.c, udpCommBSD.c: removed socket-descriptor argument
   from udpCommReturnPacket() again.
   We can store the receiving interface hidden in the buffer.

 - udpComm.h: Paranoia protection again overflow of multiplication in ms2ticks().
 - lanIpBasic.h: Added 'udpSockGetBufIf()'.

2009/09/10 (TS):
 - lanIpBasic.c: moved 'arpPutEntry()' from UDP handling
   in handleIP() to low-priority worker.

2009/09/10 (TS):
 - drvAmdEthIpBasic.c, drvGnrIpBasic.c, drvLan9118IpBasic.c,
   drvXXXIpBasic.c.Template, lanIpBasic.c, lanIpBasic.h,
   lanIpBasicTest.c:
   renamed lanIpBscDrvStart()/lanIpBscDrvShutdown() ->
   NETDRV_START() / NETDRV_SHUTDOWN().

2009/09/10 (TS):
 - drvLan9118.c, drvUdpSock.c, lanIpBasic.c, lanIpBasic.h,
   lanIpBasicTest.c, lanIpProto.h, padStream.c: renamed and
   restructured some of the protocol header structs (but I'm
   still not quite happy).

2009/09/10 (TS):
 - lanIpBasic.c:
     o moved ARP handling to low-priority worker.
     o BUGFIX: cannot use 'arprep' buffer for sending ARP reply
       since a new request may arrive before our reply has made
       it out of the TX. Instead, we re-use the received packet
       but must copy arprep there (no issue since we do this
       from the low-priority worker anyways).

2009/09/10 (TS):
 - lanIpBasic.c:
     o moved IGMP checksum calculation to low-priority worker (processIgmp()).
     o moved ICMP handling low-priority worker (processIcmp()).

2009/09/10 (TS):
 - lanIpBasic.c: many changes and additions; multicast + IGMPv2
   support were added. In more detail:
    o added 'callout' facility (copy of my implementation for libbsdport)
      for scheduling work/callbacks in the future.
    o added htonsc(), htonlc() for byte-swapping constants. These
      'routines' are designed to be optimized away by the compiler
      (which can perform the swapping at compile-time).
    o BUGFIX: RBUF_ALIGN() macro didn't really align...